--- a/src/app/modules/user-management/Profile/profile-edit/profile-form.dialog.component.html
+++ b/src/app/modules/user-management/Profile/profile-edit/profile-form.dialog.component.html
@@ -3,6 +3,7 @@
 
 
 <div class="px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+  <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">Assign Pages</div>
 
   <!-- Header -->
   <div
@@ -14,7 +15,6 @@
           <mat-progress-bar [mode]="'indeterminate'" *ngIf="isLoading"></mat-progress-bar>
       </div>
       <!-- Title -->
-      <div class="text-4xl font-extrabold tracking-tight">Assign Pages</div>
       <!-- Actions -->
 
   </div>
