--- a/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
+++ b/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
@@ -1,6 +1,6 @@
 <div>
-    <div class=" px-10 pt-4 sm:absolute sm:inset-0   overflow-y-scroll overflow-x-scroll bg-card dark:bg-transparent">
-        <div class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">NDC Search List</div>
+    <div class=" px-10  sm:absolute sm:inset-0   overflow-y-scroll overflow-x-scroll bg-card dark:bg-transparent">
+        <div class="text-3xl pt-4 font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">NDC Search List</div>
 
         <!-- Header -->
         <form [formGroup]="ndcForm">
@@ -65,7 +65,7 @@
 
         </form>
 
-          <div class="row py-4">
+          <div class="row my-4">
             <div class="col-lg-12">
               <div class="mat-table__wrapper" >
                 <mat-table class="lmat-elevation-z8"
