--- a/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
+++ b/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
@@ -163,7 +163,7 @@
           </div>
 
 
-        <div class="text-4xl font-extrabold tracking-tight">NDCs Pending for Approval</div>
+        <div class="text-3xl font-extrabold tracking-tight pb-2 border-b border-green-500 p-2" style="background-color: #f6fcf8;">NDCs Pending for Approval</div>
         <br>
         <br>
 
