--- a/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
+++ b/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
@@ -1,6 +1,6 @@
 <div class=" px-10  overflow-scroll sm:absolute sm:inset-0 flex
 flex-col flex-auto min-w-0  bg-card dark:bg-transparent">
-    <div class=" pt-4 text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">List Geo Fencing</div>
+    <div class=" mt-4 text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">List Geo Fencing</div>
 
     <!-- Header -->
     <div [formGroup]="listForm" class="mt-2">
