--- a/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
+++ b/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
@@ -64,16 +64,15 @@
                   </div>
 
         </form>
-
           <div class="row my-4">
             <div class="col-lg-12">
               <div class="mat-table__wrapper" >
                 <mat-table class="lmat-elevation-z8"
                            [dataSource]="request_data_source | paginate: {id: 'ndcReq',itemsPerPage: pageSize, currentPage: pageIndex, totalItems: ndcLength}">
-                  <ng-container matColumnDef="Id">
-                    <mat-header-cell [style.min-width]="" *matHeaderCellDef>ID</mat-header-cell>
-                    <mat-cell [style.min-width]="" *matCellDef="let dvReq">{{dvReq.Num}}</mat-cell>
-                  </ng-container>
+<!--                  <ng-container matColumnDef="Id">-->
+<!--                    <mat-header-cell [style.min-width]="" *matHeaderCellDef>ID</mat-header-cell>-->
+<!--                    <mat-cell [style.min-width]="" *matCellDef="let dvReq">{{dvReq.Num}}</mat-cell>-->
+<!--                  </ng-container>-->
                   <ng-container matColumnDef="customer_cnic">
                     <mat-header-cell [style.min-width]="" *matHeaderCellDef>Customer CNIC
                     </mat-header-cell>
