--- a/src/app/modules/customer/customer-list/customer-list.component.html
+++ b/src/app/modules/customer/customer-list/customer-list.component.html
@@ -173,7 +173,7 @@
                     <mat-cell *matCellDef="let customer">
                         <button *ngIf="!isDialog" mat-icon-button color="primary" (click)="editCustomer(customer)">
                             <!--<mat-icon style="margin-left: 5px;" title="Edit land">edit</mat-icon>   loggedInUserDetails.User.UserId        -->
-                            <mat-icon style="margin-left: 2px;" title="View Customer">visibility</mat-icon>
+                            <mat-icon class="text-green-500" style="margin-left: 2px; color: #01671b !important;" title="View Customer">visibility</mat-icon>
                         </button>
                     </mat-cell>
                 </ng-container>
