--- a/src/app/modules/land-creation/cust-land-information/cust-land-information.component.html
+++ b/src/app/modules/land-creation/cust-land-information/cust-land-information.component.html
@@ -259,7 +259,7 @@
                 </tr>
                 </tbody>
             </table>
-            <button class="py-2" mat-raised-button color="primary" type="button" (click)="saveCustomerLandInfo()"><mat-icon class="mr-2">save</mat-icon> Save
+            <button class="py-2" mat-raised-button color="primary"  style="background-color: #01671B;"  type="button" (click)="saveCustomerLandInfo()"><mat-icon class="mr-2">save</mat-icon> Save
             </button>
             <button mat-raised-button color="primary" type="button" class="ml-2" (click)="clearSaveCustomerLandInfo()"
                     *ngIf="!isFormReadonly"><mat-icon class="mr-2"> clear_all</mat-icon>Clear
