--- a/src/app/modules/land-creation/cust-land-list/cust-land-list.component.html
+++ b/src/app/modules/land-creation/cust-land-list/cust-land-list.component.html
@@ -175,14 +175,14 @@
                 <ng-container matColumnDef="View">
                     <mat-header-cell *matHeaderCellDef>View</mat-header-cell>
                     <mat-cell *matCellDef="let land">
-                        <button mat-icon-button color="primary" *ngIf="CheckEidtStatus(land)"
+                        <button  mat-icon-button color="primary" *ngIf="CheckEidtStatus(land)"
                                 (click)="editland(land)">
                             <mat-icon style="margin-left: 5px;" title="Edit land">edit</mat-icon>
                         </button>
 
-                        <button mat-icon-button color="primary" *ngIf="CheckViewStatus(land)"
+                        <button mat-icon-button  color="primary" *ngIf="CheckViewStatus(land)"
                                 (click)="editland(land)">
-                            <mat-icon title="View land">visibility</mat-icon>
+                            <mat-icon style="color:#01671B !important;" title="View land">visibility</mat-icon>
                         </button>
                     </mat-cell>
                 </ng-container>
