--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -24,6 +24,13 @@ body.light .mat-flat-button.mat-primary, body.light .mat-raised-button.mat-prima
 }
 
 
+.text-green{
+  color: #01671B;
+}
+.bg-green{
+  background-color: #01671B;
+}
+
 .cdk-overlay-pane{
     overflow-y: scroll;
 }
