--- a/src/app/modules/configuration-management/configuration-list/configuration-list.component.html
+++ b/src/app/modules/configuration-management/configuration-list/configuration-list.component.html
@@ -1,4 +1,4 @@
-<div class="px-10 pt-4 absolute inset-0 bg-white flex flex-col min-w-0 overflow-y-auto" cdkScrollable>
+<div class="px-10 pt-4 absolute inset-0 bg-white flex flex-col min-w-0 overflow-y-scroll" cdkScrollable>
 
     <!-- Header -->
     <div
@@ -7,7 +7,7 @@
 
             <!-- Title -->
             <div class="mt-2">
-                <h2 class="text-3xl md:text-4xl font-extrabold tracking-tight leading-7 sm:leading-10 truncate">
+                <h2 class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">
                     Configurations List
                 </h2>
             </div>
@@ -23,7 +23,7 @@
     </div>
 
     <!-- Main -->
-    <div class=" " 
+    <div class=" overflow-x-hidden " 
     style=" 
             min-width: max-content;
             max-height: 70vh;
