--- a/src/app/modules/configuration-management/document-type-edit/document-type-edit.component.html
+++ b/src/app/modules/configuration-management/document-type-edit/document-type-edit.component.html
@@ -33,7 +33,7 @@
                                     cdkFocusInitial>
                                     <mat-icon class="mr-2">cancel</mat-icon> Cancel
                             </button>&nbsp;
-                            <button type="button" class="btn btn-primary" mat-raised-button color="primary" (click)="onSubmit()"
+                            <button style="background-color: #01671B;" type="button" class="btn btn-primary" mat-raised-button color="primary" (click)="onSubmit()"
                                     [disabled]="viewLoading || submitted">
                                     <mat-icon class="mr-2">save</mat-icon> Save
                             </button>
