--- a/src/app/modules/journal-voucher/jv-form/jv-form.component.html
+++ b/src/app/modules/journal-voucher/jv-form/jv-form.component.html
@@ -427,7 +427,7 @@
     <div class="col-lg-12 text-left pt-4 border-t">
 
 
-        <button mat-raised-button color="primary" (click)="save()" type="submit"
+        <button style="background-color: #01671B;" mat-raised-button color="primary" (click)="save()" type="submit"
                 [disabled]="submitted || transactionEdit" *ngIf="!viewOnly"><mat-icon class="mr-2">save</mat-icon> Save
         </button>
         <button mat-raised-button color="primary" class="ml-2" (click)="clearForm()"
