--- a/src/app/modules/loan/cl-application-header/cl-application-header.component.html
+++ b/src/app/modules/loan/cl-application-header/cl-application-header.component.html
@@ -157,7 +157,7 @@
       </div>
       <div class="form-group kt-form__group row">
         <div class="col-lg-3 mt-1p">
-          <button [disabled]="isSaveApplicationHeaderInProgress" type="button" class="btn btn-primary" mat-raised-button color="primary" (click)="onSaveApplicationHeader()">
+          <button style="background-color: #01671B;" [disabled]="isSaveApplicationHeaderInProgress" type="button" class="btn btn-primary" mat-raised-button color="primary" (click)="onSaveApplicationHeader()">
             <mat-icon class="mr-2">save</mat-icon> Save
           </button>
           <button type="button" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" mat-raised-button color="danger"  (click)="onClearSavApplicationHeader()" >
