--- a/src/app/modules/loan/cl-customers/cl-customers.component.html
+++ b/src/app/modules/loan/cl-customers/cl-customers.component.html
@@ -107,7 +107,7 @@
       </div>
       <div class="form-group kt-form__group row">
         <div class="col-lg-3 mt-1p">
-          <button type="button" class="btn btn-primary" mat-raised-button color="primary" (click)="onSaveCustomer()">
+          <button style="background-color: #01671B;" type="button" class="btn btn-primary" mat-raised-button color="primary" (click)="onSaveCustomer()">
             <mat-icon class="mr-2">save</mat-icon> Save
           </button>          
         </div>
