--- a/src/app/modules/user-management/Role/create-edit-role/create-edit-role.component.html
+++ b/src/app/modules/user-management/Role/create-edit-role/create-edit-role.component.html
@@ -36,6 +36,7 @@
     <button class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" mat-button mat-dialog-close><mat-icon class="mr-2">cancel</mat-icon> Cancel</button>
    
      <button
+     style="background-color: #01671B;"
      class=""
      mat-flat-button
      [color]="'primary'"
