--- a/src/app/modules/loan-recovery/recovery-form/recovery-form.component.html
+++ b/src/app/modules/loan-recovery/recovery-form/recovery-form.component.html
@@ -440,7 +440,7 @@
 
     <div class="col-lg-12">
       <div class="form-group kt-form__group">
-        <button *ngIf="isSimpleRecovery" mat-raised-button color="primary" (click)="save()"
+        <button style="background-color: #01671B;" *ngIf="isSimpleRecovery" mat-raised-button color="primary" (click)="save()"
           [disabled]="submitted || viewOnly || ibDisSave"><mat-icon class="mr-2">save</mat-icon> Save</button>
 
         <button mat-raised-button color="primary" class="ml-2" (click)="makeAndSubmit()"
