--- a/src/app/modules/loan/cl-appraisal-of-proposed-investment/cl-appraisal-of-proposed-investment.component.html
+++ b/src/app/modules/loan/cl-appraisal-of-proposed-investment/cl-appraisal-of-proposed-investment.component.html
@@ -223,7 +223,7 @@
 
       <div class="form-group kt-form__group row">
         <div class="col-lg-3 kt-margin-bottom-20-mobile">
-          <button type="button" class="btn btn-primary" mat-raised-button color="primary" (click)="AddAppraisalProposed()">
+          <button style="background-color: #01671B;" type="button" class="btn btn-primary" mat-raised-button color="primary" (click)="AddAppraisalProposed()">
             <mat-icon class="mr-2">save</mat-icon> Save
           </button>
         </div>
