--- a/src/app/modules/loan/cl-legal-heirs/cl-legal-heirs.component.html
+++ b/src/app/modules/loan/cl-legal-heirs/cl-legal-heirs.component.html
@@ -93,7 +93,7 @@
         </div>
         <div class="form-group kt-form__group row">
           <div class="col-lg-3 mb-2">
-            <button type="button" class="btn btn-primary" mat-raised-button color="primary" (click)="onSaveLegalHeirsForm()">
+            <button style="background-color: #01671B;" type="button" class="btn btn-primary" mat-raised-button color="primary" (click)="onSaveLegalHeirsForm()">
               <mat-icon class="mr-2">save</mat-icon> Save
             </button>
             <button type="button" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"  color="danger" (click)="onClearLegalHeirsForm()">
