--- a/src/app/modules/loan/cl-loan-witness/cl-loan-witness.component.html
+++ b/src/app/modules/loan/cl-loan-witness/cl-loan-witness.component.html
@@ -648,7 +648,7 @@
 
         <div class="form-group kt-form__group row">
           <div class="col-lg-12 kt-margin-bottom-20-mobile">
-            <button class="mat-focus-indicator mat-flat-button mat-button-base mat-primary" (click)="saveCheckList()"><mat-icon class="mr-2">save</mat-icon> Save</button>
+            <button style="background-color: #01671B;" class="mat-focus-indicator mat-flat-button mat-button-base mat-primary" (click)="saveCheckList()"><mat-icon class="mr-2">save</mat-icon> Save</button>
             <button class="mat-focus-indicator mat-flat-button mat-button-base mat-primary mx-2" (click)="submitLoanApplication()" ><mat-icon class="mr-2">check_circle</mat-icon> Submit</button>
             <!--<button class="btn btn-primary mr-1p">New Case</button>
             <button class="btn btn-primary mr-1p">Pending List</button>-->
