--- a/src/app/modules/loan/cl-purpose/cl-purpose.component.html
+++ b/src/app/modules/loan/cl-purpose/cl-purpose.component.html
@@ -133,7 +133,7 @@
       </div>
       <div class="form-group kt-form__group row">
         <div class="col-lg-3 mt-1p">
-          <button type="button" class="btn btn-primary" mat-raised-button color="primary" (click)="onSavePurpose()">
+          <button style="background-color: #01671B;" type="button" class="btn btn-primary" mat-raised-button color="primary" (click)="onSavePurpose()">
             <mat-icon class="mr-2">save</mat-icon> Save
           </button>
           <button type="button" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"  color="danger" (click)="onClearSavePurpose()">
