--- a/src/app/modules/loan/cl-securities/cl-securities.component.html
+++ b/src/app/modules/loan/cl-securities/cl-securities.component.html
@@ -61,7 +61,7 @@
         </div>
         <div class="form-group kt-form__group row">
           <div class="col-lg-3 mb-2">
-            <button type="button" [disabled]="isSecuritiesFormInProgress" class="btn btn-primary" mat-raised-button color="primary" (click)="onSaveLoanSecurities()">
+            <button style="background-color: #01671B;" type="button" [disabled]="isSecuritiesFormInProgress" class="btn btn-primary" mat-raised-button color="primary" (click)="onSaveLoanSecurities()">
               <mat-icon class="mr-2">save</mat-icon> Save
             </button>
             <button type="button" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" mat-raised-button color="danger" (click)="clearLoanSecuritiesForm()" >
