--- a/src/app/modules/loan/save-orr/save-orr.component.html
+++ b/src/app/modules/loan/save-orr/save-orr.component.html
@@ -207,7 +207,7 @@
 
         <div class="form-group kt-form__group row">
           <div class="col-lg-12 kt-margin-bottom-20-mobile">
-            <button mat-raised-button color="primary" (click)="save()" [disabled]="submitted"><mat-icon class="mr-2">save</mat-icon>{{showFinalOrrTable?"Submit":"Save"}}</button>
+            <button style="background-color: #01671B;" mat-raised-button color="primary" (click)="save()" [disabled]="submitted"><mat-icon class="mr-2">save</mat-icon>{{showFinalOrrTable?"Submit":"Save"}}</button>
             <button mat-raised-button color="primary" class="ml-2" (click)="togglePage()" [disabled]="submitted"><mat-icon>navigate_next</mat-icon>{{showFinalOrrTable?"Back":"Next"}}</button>
             &nbsp;&nbsp;&nbsp;&nbsp;<span id="llcInquiryText" (click)="goToPendingList()"><b>Pending List</b></span>
             <!--<button mat-raised-button color="primary" class="ml-2">Delete</button>-->
