--- a/src/app/modules/user-management/users/geofencing-edit/geofencing-edit.component.html
+++ b/src/app/modules/user-management/users/geofencing-edit/geofencing-edit.component.html
@@ -36,7 +36,7 @@
             </button>
           </div>
           <div class="col-lg-3 col-sm-12">
-            <button *ngIf="isSaveBtnShown" type="button" class="btn btn-primary" mat-raised-button
+            <button style="background-color: #01671B;" *ngIf="isSaveBtnShown" type="button" class="btn btn-primary" mat-raised-button
             color="primary" (click)="onSubmit()" [disabled]="viewLoading || submitted">
             <mat-icon class="mr-2">save</mat-icon> Save
             </button>
