--- a/src/app/modules/land-creation/land-charge-creation/land-charge-creation.component.html
+++ b/src/app/modules/land-creation/land-charge-creation/land-charge-creation.component.html
@@ -1,7 +1,7 @@
 <div class="kt-portlet">
     <div class="kt-portlet__head kt-portlet__head__custom" id="list-header">
         <div class="kt-portlet__head-label">
-            <h3 class="kt-portlet__head-title">{{getTitle()}}</h3>
+            <h3 class="text-3xl font-extrabold tracking-tight pb-2 border-b mb-2 border-green-500 p-2" style="background-color: #f6fcf8;">{{getTitle()}}</h3>
         </div>
     </div>
     <form [formGroup]="LandInformationForm" class="kt-form kt-form--group-seperator-dashed">
@@ -110,7 +110,7 @@
                 <div class="form-group kt-form__group row">
 
                     <div class="col-lg-4 kt-margin-bottom-20-mobile">
-                        <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label class="customMatLabel">Village/Chak/Moza: <strong class="matMandatory">*</strong>
                             </mat-label>
                             <input [readonly]="isFormReadonly" matInput placeholder="Village/Chak/Moza"
@@ -120,7 +120,7 @@
                     </div>
 
                     <div class="col-lg-4 kt-margin-bottom-20-mobile">
-                        <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label class="customMatLabel">Remarks: <strong class="matMandatory"></strong>
                             </mat-label>
                             <input [readonly]="isFormReadonly" matInput placeholder="Remarks" formControlName="Remarks"
@@ -154,7 +154,7 @@
                 <div class="form-group kt-form__group row">
 
                     <div class="col-lg-4 kt-margin-bottom-20-mobile">
-                        <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label class="customMatLabel">Area <strong class="matMandatory">*</strong></mat-label>
                             <input matInput placeholder="" [readonly]="isFormReadonly" [(ngModel)]="Area"
                                    [ngModelOptions]="{standalone: true}" maxlength="30" autocomplete="off"
@@ -164,7 +164,7 @@
                     </div>
 
                     <div class="col-lg-4 kt-margin-bottom-20-mobile">
-                        <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                        <mat-form-field class="mat-form-field-fluid w-8/12" appearance="outline">
                             <mat-label class="customMatLabel">Convert Unit<strong class="matMandatory"></strong>
                             </mat-label>
                             <mat-select [(ngModel)]="ConvertUnit" [ngModelOptions]="{standalone: true}"
@@ -174,13 +174,13 @@
                                 </mat-option>
                             </mat-select>
                         </mat-form-field>
-                        <button mat-raised-button color="primary" (click)="AreaConverter()" *ngIf="!isFormReadonly">
+                        <button class="4/12 ml-2" mat-raised-button color="primary" (click)="AreaConverter()" *ngIf="!isFormReadonly">
                             Convert
                         </button>
                     </div>
 
                     <div class="col-lg-4 kt-margin-bottom-20-mobile">
-                        <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label class="customMatLabel">Result</mat-label>
                             <input matInput [(ngModel)]="Result" [ngModelOptions]="{standalone: true}"
                                    readonly="readonly" maxlength="30" autocomplete="off"/>
@@ -273,7 +273,7 @@
                                                readonly="readonly"/>
                                     </td>
                                     <td (click)="deleteRow(i)" style="cursor:pointer;">
-                                        <p style="color:orange;" *ngIf="!isFormReadonly">del</p>
+                                        <p class="text-red-500 mt-6" *ngIf="!isFormReadonly"><mat-icon class="mr-2 text-red-500">delete_forever</mat-icon></p>
                                     </td>
                                 </tr>
                                 <tr>
@@ -283,8 +283,8 @@
                                     <td></td>
                                     <td></td>
                                     <td>
-                                        <button *ngIf="!isFormReadonly" type="button" mat-raised-button
-                                                (click)="addRow()">Add New Row
+                                        <button class="mat-focus-indicator mat-flat-button mat-button-base mat-primary" *ngIf="!isFormReadonly" type="button" mat-raised-button
+                                                (click)="addRow()"><mat-icon class="mr-2">add</mat-icon>Add New Row
                                         </button>
                                     </td>
                                 </tr>
@@ -304,12 +304,12 @@
                 <div class="kt-form__actions kt-form__actions--solid">
                     <div class="row text-center">
                         <div class="col-lg-12">
-                            <button *ngIf="!isFormReadonly" mat-raised-button color="primary"
-                                    (click)="saveLandChargeCreationDetails()">Save
+                            <button style="background-color: #01671B;" *ngIf="!isFormReadonly" mat-raised-button color="primary"
+                                    (click)="saveLandChargeCreationDetails()"><mat-icon class="mr-2">save</mat-icon> Save
                             </button>&nbsp;&nbsp;
-                            <button type="button" class="button-red" mat-raised-button cdkFocusInitial
+                            <button  type="button" class="mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" mat-raised-button cdkFocusInitial
                                     (click)="onCloseClick()">
-                                Close
+                                    <mat-icon class="mr-2">cancel</mat-icon> Cancel
                             </button>
                         </div>
                     </div>
