--- a/src/app/modules/journal-voucher/jv-form/jv-form.component.html
+++ b/src/app/modules/journal-voucher/jv-form/jv-form.component.html
@@ -430,7 +430,7 @@
         <button style="background-color: #01671B;" mat-raised-button color="primary" (click)="save()" type="submit"
                 [disabled]="submitted || transactionEdit" *ngIf="!viewOnly"><mat-icon class="mr-2">save</mat-icon> Save
         </button>
-        <button mat-raised-button color="primary" class="ml-2" (click)="clearForm()"
+        <button mat-raised-button color="primary" class="ml-2 mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" (click)="clearForm()"
                 [disabled]="submitted || transactionEdit" *ngIf="!viewOnly"><mat-icon class="mr-2"> clear_all</mat-icon>Clear
         </button>
         <!-- <button mat-raised-button color="primary" class="ml-2" type="reset" [disabled]="submitted || transactionEdit">Clear</button> -->
