--- a/src/app/modules/land-creation/land-charge-creation/land-charge-creation.component.html
+++ b/src/app/modules/land-creation/land-charge-creation/land-charge-creation.component.html
@@ -14,7 +14,7 @@
 
                 <div class="form-group kt-form__group row">
 
-                    <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                    <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label class="customMatLabel">Reference No <strong class="matMandatory">*</strong>
                             </mat-label>
@@ -24,7 +24,7 @@
                             </mat-error>
                         </mat-form-field>
                     </div>
-                    <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                    <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label class="customMatLabel">Passbook No <strong class="matMandatory"></strong>
                             </mat-label>
@@ -34,7 +34,7 @@
                             </mat-error>
                         </mat-form-field>
                     </div>
-                    <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                    <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label class="customMatLabel">Total Area <strong class="matMandatory"></strong>
                             </mat-label>
@@ -45,7 +45,7 @@
                 </div>
                 <div class="form-group kt-form__group row">
 
-                    <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                    <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
 
                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label class="customMatLabel">Province <strong class="matMandatory">*</strong>
@@ -67,7 +67,7 @@
 
                     </div>
 
-                    <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                    <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
 
                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label class="customMatLabel">District <strong class="matMandatory">*</strong>
@@ -89,7 +89,7 @@
 
                     </div>
 
-                    <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                    <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label class="customMatLabel">Tehsil <strong class="matMandatory">*</strong></mat-label>
                             <mat-select formControlName="Tehsil" [disabled]="isFormReadonly">
@@ -109,7 +109,7 @@
                 </div>
                 <div class="form-group kt-form__group row">
 
-                    <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                    <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label class="customMatLabel">Village/Chak/Moza: <strong class="matMandatory">*</strong>
                             </mat-label>
@@ -119,7 +119,7 @@
 
                     </div>
 
-                    <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                    <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label class="customMatLabel">Remarks: <strong class="matMandatory"></strong>
                             </mat-label>
@@ -133,7 +133,7 @@
                     </div>
 
 
-                    <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                    <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label class="customMatLabel">Unit <strong class="matMandatory"></strong></mat-label>
                             <mat-select [(ngModel)]="Unit" [ngModelOptions]="{standalone: true}"
@@ -153,7 +153,7 @@
 
                 <div class="form-group kt-form__group row">
 
-                    <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                    <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label class="customMatLabel">Area <strong class="matMandatory">*</strong></mat-label>
                             <input matInput placeholder="" [readonly]="isFormReadonly" [(ngModel)]="Area"
@@ -163,7 +163,7 @@
 
                     </div>
 
-                    <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                    <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
                         <mat-form-field class="mat-form-field-fluid w-8/12" appearance="outline">
                             <mat-label class="customMatLabel">Convert Unit<strong class="matMandatory"></strong>
                             </mat-label>
@@ -179,7 +179,7 @@
                         </button>
                     </div>
 
-                    <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                    <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label class="customMatLabel">Result</mat-label>
                             <input matInput [(ngModel)]="Result" [ngModelOptions]="{standalone: true}"
