--- a/src/app/modules/borrower-information/borrower-information.component.html
+++ b/src/app/modules/borrower-information/borrower-information.component.html
@@ -149,7 +149,7 @@
                 <ng-container matColumnDef="Link">
                     <mat-header-cell *matHeaderCellDef></mat-header-cell>
                     <mat-cell *matCellDef="let borrower">
-                        <span id="llcInquiryText" (click)="viewInquiry(borrower)"><b>View LC Inquiry</b></span>
+                        <span style="color: #01671B;" class="cursor-pointer" id="llcInquiryText" (click)="viewInquiry(borrower)"><b>View LC Inquiry</b></span>
                         <!-- <a (click)="viewInquiry(borrower)">View LC Inquiry</a>             -->
                     </mat-cell>
                 </ng-container>
