--- a/src/app/modules/loan-recovery/recovery-form/recovery-form.component.html
+++ b/src/app/modules/loan-recovery/recovery-form/recovery-form.component.html
@@ -132,7 +132,7 @@
                 <!--//tranID//DIsbID-->
                 <div class="col-lg-2 kt-margin-bottom-20-mobile">
                   <br />
-                  <span id="llcInquiryText" (click)="viewLLCInquiry()"><b>View LC Inquiry</b></span>
+                  <span style="color: #01671B;" class="cursor-pointer"  id="llcInquiryText" (click)="viewLLCInquiry()"><b>View LC Inquiry</b></span>
                 </div>
 
               </div>
