--- a/src/app/modules/reschedule-cases/make-reschedule/make-reschedule.component.html
+++ b/src/app/modules/reschedule-cases/make-reschedule/make-reschedule.component.html
@@ -235,7 +235,7 @@
         <button mat-raised-button class="mr-4 mat-focus-indicator shadow-md btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger" color="primary" (click)="cancelTransaction()"><mat-icon class="mr-2">cancel</mat-icon>Cancel Transaction</button>
         <span id="llcInquiryText" class="mr-4"  [routerLink]="['/reschedule-cases/pending-reschedule']"><b>Pending List</b></span>
         <span id="llcInquiryText" class="mr-4" [routerLink]="['/reschedule-cases/refer-back-reschedule']"><b>Referback List</b></span>
-        <span id="llcInqiryText" (click)="viewLCInquiry()"><b>View LC Inquiry</b></span>
+        <span style="color: #01671B;" class="cursor-pointer" id="llcInqiryText" (click)="viewLCInquiry()"><b>View LC Inquiry</b></span>
     </div>
 
 </div>
