--- a/src/app/modules/user-management/activity/activity-list/activity-list.component.html
+++ b/src/app/modules/user-management/activity/activity-list/activity-list.component.html
@@ -1,4 +1,5 @@
-<div class=" px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+<div
+    class=" px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
 
     <!-- Header -->
     <div
@@ -24,15 +25,17 @@
 
         <!-- CONTENT GOES HERE -->
         <div class="pt-1 ">
-            <div class="form-group row" style=" 
+            <div class="form-group row" style="
             min-width: max-content;
             max-height: 70vh;
             overflow-y:scroll;
         ">
                 <div class="col-lg-12 col-md-12 kt-margin-bottom-20-mobile  mat-elevation-z8"
                      id="custom-table-activity-list">
-                    <div class="custom-accordion  rounded-lg my-2 shadow border" *ngFor="let activity of userActivities;let i=index">
-                        <div class="custom-accordion-head border-0" (click)="toggleAccordion(i)" style="cursor: pointer">
+                    <div class="custom-accordion  rounded-lg my-2 shadow border"
+                         *ngFor="let activity of userActivities;let i=index">
+                        <div class="custom-accordion-head border-0" (click)="toggleAccordion(i,activity.ActivityID)"
+                             style="cursor: pointer">
                             <div class="custom-padding" style="align-self: center;">
                                 <h3 class="font-medium">
                                     {{activity.ActivityName}}
@@ -50,15 +53,16 @@
                                         edit
                                     </mat-icon>
                                 </button>
-                                <button mat-icon-button id="{{'arrow_down_'+i}}" style="display: block">
+                                <button mat-icon-button  *ngIf="!lists_record.includes(activity.ActivityID)">
                                     <mat-icon>expand_more</mat-icon>
                                 </button>
-                                <button mat-icon-button id="{{'arrow_up_'+i}}" style="display:none;">
+                                <button mat-icon-button  *ngIf="lists_record.includes(activity.ActivityID)">
                                     <mat-icon>expand_less</mat-icon>
                                 </button>
                             </div>
                         </div>
-                        <div class="custom-accordion-body bg-gray-50 border-t rounded" id="{{'table_'+i}}" style="display: none">
+                        <div class="custom-accordion-body bg-gray-50 border-t rounded" id="{{'table_'+i}}"
+                             style="display: none">
                             <table class="table table-responsive" style="display: inline-table !important;">
                                 <thead class="thead-light">
                                 <tr>
